--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <h1>SWAP</h1>
     <a
-      href="https://rinkeby.etherscan.io/address/0xeDE87e8D824aFb897d01B8e40D9A24Df4Db60efB#writeContract"
+      href="https://testnet.bscscan.com/address/0x0FED3B32dfAceD0ed77D1F2b92F4049587CB898e#writeContract"
       target="_blank"
       >Add / Remove Liquidity Here</a
     ><br />
