--- a/index.html
+++ b/index.html
@@ -5,23 +5,41 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.7.4/web3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
-    <script src="93n.js"></script>
+    <script src="93n2.js"></script>
+    <style>
+      .nodes {
+        width: 150px;
+        display: inline-block;
+        border-style: dotted;
+        text-align: center;
+        padding: 47px 0;
+        cursor: pointer;
+      }
+      #n0 {
+        background-color: grey;
+      }
+    </style>
   </head>
   <body>
     <button id="connect" onclick="connect()">Connect</button>
     <h1>Dashboard</h1>
     <b id="txtUSDT"></b> USDT <b id="txt93N"></b> 93N<br /><br />
     Upline: <b id="txtRB"></b>
-    <button
-      onclick="navigator.clipboard.writeText(location.href.replace(location.hash,'')+'?#'+acct);$(this).html('Copied')"
-    >
-      Copy your referral link</button
-    ><br /><br />
-    <select id="dNode">
-      <option value="0">Club node</option>
-      <option value="3">Super node</option>
-      <option value="4">Asset node</option>
-    </select>
+    <br>
+    <a id="ref"></a><br /><br />
+    <div id="n0" class="nodes" onclick="setNode(0)">
+      <b>Club node</b><br />(IMAGE PLACEHOLDER)
+    </div>
+    <div id="n3" class="nodes" onclick="setNode(3)">
+      <b>Super node</b><br />(IMAGE PLACEHOLDER)
+    </div>
+    <div id="n4" class="nodes" onclick="setNode(4)">
+      <b>Asset node</b><br />(IMAGE PLACEHOLDER)
+    </div>
+    <div id="n5" class="nodes" onclick="setNode(5)">
+      <b>Aleo node</b><br />(IMAGE PLACEHOLDER)
+    </div>
+    <br /><br />
     <input id="dNum" type="number" value="1" min="1" />
     <button id="stakeBtn" onclick="deposit()">Purchase</button><br /><br />
     <button onclick="disUser(acct,1)">View package & downline</button> /
